orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Company__c/Company__c.object-meta.xml
<CustomObject>
    <description>Company accounts and organizations - BlackRoad General CRM</description>
    <label>Company</label>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>