orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Company__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Prospect</fullName><default>true</default><label>Prospect</label></value>
            <value><fullName>Customer</fullName><default>false</default><label>Customer</label></value>
            <value><fullName>Partner</fullName><default>false</default><label>Partner</label></value>
            <value><fullName>Churned</fullName><default>false</default><label>Churned</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>