orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Company__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Technology</fullName><default>false</default><label>Technology</label></value>
            <value><fullName>Healthcare</fullName><default>false</default><label>Healthcare</label></value>
            <value><fullName>Finance</fullName><default>false</default><label>Finance</label></value>
            <value><fullName>Manufacturing</fullName><default>false</default><label>Manufacturing</label></value>
            <value><fullName>Retail</fullName><default>false</default><label>Retail</label></value>
            <value><fullName>Education</fullName><default>false</default><label>Education</label></value>
            <value><fullName>Government</fullName><default>false</default><label>Government</label></value>
            <value><fullName>Non-Profit</fullName><default>false</default><label>Non-Profit</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>