orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Company__c/validationRules/Positive_Revenue.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_Revenue</fullName>
    <active>true</active>
    <description>Annual Revenue must be positive if provided</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Annual_Revenue__c)),
    Annual_Revenue__c &lt; 0
)</errorConditionFormula>
    <errorDisplayField>Annual_Revenue__c</errorDisplayField>
    <errorMessage>Annual Revenue cannot be negative</errorMessage>
</ValidationRule>