orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Company__c/validationRules/Require_Industry_for_Customers.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Industry_for_Customers</fullName>
    <active>true</active>
    <description>Industry is required when Account Status is Customer</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Account_Status__c, "Customer"),
    ISPICKVAL(Industry__c, "")
)</errorConditionFormula>
    <errorDisplayField>Industry__c</errorDisplayField>
    <errorMessage>Industry is required for Customer accounts</errorMessage>
</ValidationRule>