orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Company__c/validationRules/Valid_Website_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Website_Format</fullName>
    <active>true</active>
    <description>Website must start with http:// or https://</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Website__c)),
    NOT(OR(
        BEGINS(Website__c, "http://"),
        BEGINS(Website__c, "https://")
    ))
)</errorConditionFormula>
    <errorDisplayField>Website__c</errorDisplayField>
    <errorMessage>Website must start with http:// or https://</errorMessage>
</ValidationRule>