orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Company__c/listViews/All_Companies.listView-meta.xml
<ListView>
    <fullName>All_Companies</fullName>
    <columns>NAME</columns>
    <columns>Industry__c</columns>
    <columns>Account_Status__c</columns>
    <columns>Company_Size__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Companies</label>
</ListView>