orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Company__c/listViews/Prospects.listView-meta.xml
<ListView>
    <fullName>Prospects</fullName>
    <columns>NAME</columns>
    <columns>Industry__c</columns>
    <columns>Annual_Revenue__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Status__c</field>
        <operation>equals</operation>
        <value>Prospect</value>
    </filters>
    <label>Prospects</label>
</ListView>